kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-tenant-saas-api
  namespace: mt-saas
spec:
  type: ClusterIP
  selector:
    app: multi-tenant-saas-api
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
